<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:carbon="http://schemas.android.com/apk/res/com.carbon.about">

       <PreferenceScreen
           android:key="core_summary"
           android:layout="@layout/core_summary" />

        <com.carbon.about.widget.DeveloperPreference
            carbon:nameDev="Andros Rosa"
            carbon:statusDev="@string/status_dev"
            carbon:googleHandle="111721285589066146000"
            carbon:githubLink="http://github.com/andros11"
            carbon:emailDev="andros2011@gmail.com" />

        <com.carbon.about.widget.DeveloperPreference
            carbon:nameDev="Daniel Max"
            carbon:statusDev="@string/status_dev"
            carbon:googleHandle="115569516936113574583"
            carbon:githubLink="http://github.com/daxxmax"
            carbon:emailDev="daxx4182@gmail.com"
            carbon:twitterLink="daxxmax" />

        <com.carbon.about.widget.DeveloperPreference
            carbon:nameDev="Derek Galinas"
            carbon:statusDev="@string/status_dev_and_co_founder"
            carbon:googleHandle="114660037306973840401"
            carbon:githubLink="http://github.com/dg4prez"
            carbon:emailDev="mrdgelinas@gmail.com" />

        <com.carbon.about.widget.DeveloperPreference
            carbon:nameDev="Matt Bloomfield"
            carbon:statusDev="@string/status_dev"
            carbon:googleHandle="115194825327804536850"
            carbon:githubLink="http://github.com/mattmanwrx"
            carbon:emailDev="webmaster@mattman.org" />

        <com.carbon.about.widget.DeveloperPreference
            carbon:nameDev="Tom Dulin"
            carbon:statusDev="@string/status_dev_and_co_founder"
            carbon:googleHandle="105296412157353903888"
            carbon:githubLink="http://github.com/nocoast"
            carbon:twitterLink="n0coast" />

        <com.carbon.about.widget.DeveloperPreference
            carbon:nameDev="Ricky Salinas"
            carbon:statusDev="@string/status_dev"
            carbon:googleHandle="104728329553291412498"
            carbon:githubLink="http://github.com/slickrick"
            carbon:emailDev="rsalinas1@mail.usf.edu" />

        <com.carbon.about.widget.DeveloperPreference
            carbon:nameDev="Tyler Overturf"
            carbon:statusDev="@string/status_head_dev"
            carbon:googleHandle="106513914946845471488"
            carbon:githubLink="http://github.com/winner00"
            carbon:emailDev="toverturf@gmail.com"
            carbon:twitterLink="expertontech" />

       <PreferenceScreen
           android:key="designers_summary"
           android:layout="@layout/designers_summary" />

        <com.carbon.about.widget.DeveloperPreference
            carbon:nameDev="Adam Sambuco"
            carbon:statusDev="@string/status_designers"
            carbon:googleHandle="108778167441489933514" />

        <com.carbon.about.widget.DeveloperPreference
            carbon:nameDev="Patrick Campanale"
            carbon:statusDev="@string/status_designers"
            carbon:googleHandle="112082828842151104248" />

        <com.carbon.about.widget.DeveloperPreference
            carbon:nameDev="Damien Deaucali"
            carbon:statusDev="@string/status_designers"
            carbon:googleHandle="106985547279703270477" />

       <PreferenceScreen
           android:key="pr_summary"
           android:layout="@layout/pr_summary" />

        <com.carbon.about.widget.DeveloperPreference
            carbon:nameDev="Bionic Beast"
            carbon:statusDev="@string/status_pr" />

</PreferenceScreen>
